# Coral-Engine

./: .clang-format  .gitmodules  CMakeLists.txt  imgui.ini  project.json  vcpkg.json
assets/renderGraphs/: renderGraph.json
assets/scripts/: CameraController.cs
math/: CMakeLists.txt
math/src/: math.aabb.ixx  math.constants.ixx  math.data.ixx  math.frustum.ixx  math.ixx  math.matrix.ixx  math.quaternion.ixx  math.rect.ixx  math.transform.ixx  math.vector.ixx  types.ixx
projects/testProject/: renderGraph.json
projects/testProject/shaders/: test.frag  test.vert
shaders/compiled/: default.frag.spv  default.mesh.spv
shaders/compute/: calculateMVP.comp  fireflies.comp  generateTerrain.comp  partitionLights.comp  sketchEffect.comp
shaders/defaultMeshEXT/: default.frag  default.mesh
shaders/fireflies/: fireflies.frag  fireflies.vert
shaders/parameterShow/: normal.frag  normal.vert
shaders/pbr/: pbr.frag  pbr.vert
shaders/reflectionTest/: testUniformBuffer.frag
shaders/sketchShaders/: hashes.comp  medianHorizontal.comp  medianVertical.comp  outputImage.comp  sketch.comp  sobel.comp
shaders/skybox/: skybox.frag  skybox.mesh
shaders/slang/: hello-world.slang  wireframe.slang
shaders/terrain/: lake.frag  lake.mesh  terrain.frag  terrain.mesh
shaders/trajectory/: trajectory.frag  trajectory.mesh
shaders/wireframe/: aabb.mesh  frustum.mesh  trajectory.mesh  wireframe.frag  wireframe.vert
src/: IconsFontAwesome6.h  context.h  engine.cpp  engine.h  engine.ixx  main.cpp  renderer.cpp  renderer.h  scene.cpp  scene.h  types.ixx
src/assets/: importer.cpp  importer.h  manager.cpp  manager.h  metadata.cpp  metadata.h  prefab.cpp  prefab.h
src/color/: color.cpp  color.h
src/components/: camera.cpp  camera.h  object.cpp  object.h  renderMesh.cpp  renderMesh.h
src/compute/: pipeline.cpp  pipeline.h
src/compute/programs/: calculateMvp.cpp  calculateMvp.h  fireflies.cpp  fireflies.h  generateTerrain.cpp  generateTerrain.h  partitionLights.cpp  partitionLights.h  program.cpp  program.h
src/core/: device.cpp  device.h  input.cpp  input.h  physicalDevice.cpp  physicalDevice.h  runtime.cpp  runtime.h  scheduler.cpp  scheduler.h  shader.cpp  shader.h  window.cpp  window.h
src/ecs/: entity.h  scene.cpp  scene.h  sceneManager.cpp  sceneManager.h
src/ecs/components/: BehaviourScript.cpp  BehaviourScript.h  RenderTarget.cpp  RenderTarget.h  camera.cpp  camera.h  component.h  light.h  transform.h
src/extensions/: debugUtils.cpp  debugUtils.h  meshShader.cpp  meshShader.h
src/graphics/: framebuffer.cpp  framebuffer.h  pipeline.cpp  pipeline.h  program.cpp  program.h  renderPass.cpp  renderPass.h  renderer.cpp  renderer.h  swapChain.cpp  swapChain.h
src/graphics/objects/: aabb.cpp  aabb.h  baseMeshes.cpp  baseMeshes.h  cubeMap.cpp  cubeMap.h  material.cpp  material.h  mesh.cpp  mesh.h  texture.cpp  texture.h  textureArray.cpp  textureArray.h
src/graphics/programs/: debugCamera.cpp  debugCamera.h  displayNormals.cpp  displayNormals.h  displayViewFrustums.cpp  displayViewFrustums.h  firefliesDisplay.cpp  firefliesDisplay.h  lake.cpp  lake.h  program.cpp  program.h  skyBox.cpp  skyBox.h  terrain.cpp  terrain.h  trajectoryDisplay.cpp  trajectoryDisplay.h
src/graphics/programs/debug/: wireFrameProgram.cpp  wireFrameProgram.h
src/gui/: container.h  layer.cpp  layer.h  manager.cpp  manager.h  padding.h  reef.h  viewport.cpp  viewport.h
src/gui/elements/: button.h  center.h  checkbox.h  column.h  conditional.h  contextMenu.h  dockable.h  drag.h  dropDown.h  element.cpp  element.h  expanded.h  image.h  inputField.h  labeledRow.h  node.h  nodeSpace.h  popup.h  row.h  scrollable.h  separator.h  setSelection.h  slider.h  sliderRow.h  table.h  text.h  treeView.h  window.h
src/gui/templates/: CameraTemplate.h  LightTemplate.h  RenderTargetTemplate.h  TransformTemplate.h  bufferSettings.h  cameraSettings.h  createBufferPopup.h  fileButton.h  imageSettings.h  importAssetPopup.h  inspector.h  meshList.h  object.h  renderMeshSettings.h  renderPipelineTemplate.h  tableView.h  template.h
src/math/: aabb.h  constants.h  constants.ixx  data.h  frustum.h  math.ixx  mathMGV.h  matrix.h  matrix.ixx  quaternion.h  quaternion.ixx  rect.h  rect.ixx  transform.h  vector.h  vector.ixx
src/memory/: buffer.cpp  buffer.h  buffer.ixx  gpuStructs.h  image.cpp  image.h  image.ixx  imageView.cpp  imageView.h  manager.cpp  manager.h  sampler.cpp  sampler.h
src/memory/descriptor/: pool.cpp  pool.h  set.cpp  set.h  setLayout.cpp  setLayout.h
src/programs/: circleProgram.cpp  circleProgram.h
src/project/: renderGraph.cpp  renderGraph.h  resourceNode.h  scene.cpp  scene.h
src/re_core/: commandBuffer.cc  commandBuffer.cpp  device.cpp  input.cpp  physicalDevice.cpp  queue.cc  queue.cpp  runtime.cpp  window.cpp
src/renderPasses/: depthPrepass.cpp  depthPrepass.h  graphicsPass.cpp  graphicsPass.h  mainViewport.cpp  mainViewport.h  reflectionPass.cpp  reflectionPass.h
src/scene/: scene.cpp  scene.h
src/scripting/: assembly.cpp  assembly.h  class.cpp  class.h  domain.cpp  domain.h  object.cpp  object.h  remote.h  setup.h
src/scripting/internalCalls/: input.h  vector2.h  vector3.h
src/shader/: manager.cpp  manager.h  shader.cpp  shader.h
src/utils/: file.h  functionals.h  globalWrapper.h  narryTree.h  random.h  types.cpp  types.h  wrapper.cpp
